still in process

--- a/Documentation/Usermanual.tex
+++ b/Documentation/Usermanual.tex
@@ -47,9 +47,9 @@ We recommend to use the latest version of your browser. Both for security reason
 To use our WebApp, perform the following:\\
 
 \noindent
-1. Navigate to the link\\
-2. Enter your username and password\\
-3. Click on the button “Sign in”\\
+1. Navigate to the link.\\
+2. Enter your username and password.\\
+3. Click on the button “Sign in”.\\
 
 \subsection{WebApp Overview}
 The WebApp consists of the following areas, which are showed in Fig. 1.\\
@@ -73,7 +73,10 @@ The main areas are:\\
 \section{Installation}
 The version control of this project depends on Git, and our team chose to use GitHub to manage our source code and releases.\\\\
 \noindent
-To deploy our WebApp on a server, you can just go to our GitHub releases page (\textit{https://github.com/xianganc/PraktikumProcessMining/releases}), then download the \textit{setup.sh} to local, run the contents inside the .sh file like in Fig. 2.
+To deploy our WebApp on a server, you must firstly deploy Hadoop of edition 3.2 (\textit{https://hadoop.apache.org/releases.html}) on that server. Hadoop 3.2 supports GNU/Linux and Windows as platform. And softwares development environment like Java and ssh will also be required on the server.
+
+
+just go to our GitHub releases page (\textit{https://github.com/xianganc/PraktikumProcessMining/releases}), then download the \textit{setup.sh} to local, run the contents inside the .sh file like in Fig. 2.
 
 \begin{figure}[h]	
 	\centering
